<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Review App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="LSP">Food Packaging Review App!</string>
    <string name="new_user">Enter a Username of your choice</string>
    <string name="nfn">First Name</string>
    <string name="nln">Last Name</string>
    <string name="new_e">Enter a valid e-mail id</string>
    <string name="n_dob">Date of Birth</string>
    <string name="n_p">Enter a password (minimum 5 characters)</string>
    <string name="retype_p">Retype Password</string>
    <string name="f_l_d">Enter your e-mail id</string>
    <string name="action_forgot_login_details">Get Login Details</string>
    <string name="action_past">View Past Events</string>
    <string name="action_current">View Current Events</string>
    <string name="action_sign_up">Create Account</string>
    <string name="action_forgot_button">Forgot Username/Password?</string>
    <string name="action_upcoming">View Upcoming Events</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="bizopp_name">Name</string>
    <string name="bizopp_phone">Contact Number</string>
    <string name="bizopp_email">E-mail</string>
    <string name="bizopp_company">Company</string>
    <string name="bizopp">Let us contact you!</string>
    <string name="title_activity_success_new_user">SuccessNewUser</string>
    <string name="success_new_user">New User successfully created!</string>
    <string name="title_activity_biz_opp">BizOpp</string>
    <string name="title_activity_ongoing_event">OngoingEvent</string>
    <string name="title_activity_ongoing">OngoingActivity</string>
    <string name="title_activity_past">PastActivity</string>
    <string name="title_activity_upcoming">UpcomingActivity</string>
    <string name="title_activity_forgot_login_details">ForgotLoginDetails</string>
    <string name="title_activity_user_dashboard">UserDashboard</string>
    <string name="title_activity_nestle">Nestle</string>
    <string name="title_activity_hersheys">Hersheys</string>
    <string name="title_activity_nestle_chocolate_review">NestleChocolateReview</string>
    <string name="title_activity_nestle_cereal_review">NestleCerealReview</string>
    <string name="title_activity_hersheys_chocolate_review">HersheysChocolateReview</string>
    <string name="title_activity_hersheys_chocolate_review2">HersheysChocolateReview2</string>
    <string name="title_activity_nestle_cereal_review2">NestleCerealReview2</string>
    <string name="title_activity_update_details">UpdateDetails</string>
    <string name="title_activity_update_personal_details">UpdatePersonalDetails</string>
    <string name="title_activity_update_username_password">UpdateUsernamePassword</string>
    <string name="update_personal_details">Update Personal Details!</string>
    <string name="title_activity_authenticate_user">AuthenticateUser</string>
    <string name="title_activity_admin_access">AdminAccess</string>

</resources>
