<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lipssmackingparadise.reviewapp.viewcontroller.SignUp"
    android:id="@+id/sign_up_form">

    <EditText
        android:id="@+id/new_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:hint="@string/new_user"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/new_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nfn"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/new_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/new_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nln"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/new_first_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_e"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/new_last_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/new_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/n_dob"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/new_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/n_p"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/new_dob"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/new_retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/retype_p"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/new_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/sign_up"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="@string/action_sign_up"
        android:textStyle="bold"
        android:clickable="true"
        android:contentDescription="@string/login"
        android:onClick="newUser"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/register_title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/logo3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/logo" />

</RelativeLayout>
